--- a/index.html
+++ b/index.html
@@ -703,7 +703,7 @@
             <div class="work__container container grid">
 
                 <div class="work__card mix web">
-                    <img src="assets/img/E-Commerce.png" alt="" class="work__img">
+                    <img src="assets/img/Ecommerce.png" alt="" class="work__img">
                     <h3 class="work__title">E-Commerce Website (In Progress)</h3>
                     <span class="work__button">Demo
                         <i class="uil uil-arrow-right work__button-icon"></i>
